Hopes this fixes the flexbox issue on ios

--- a/_sass/scss/_card.scss
+++ b/_sass/scss/_card.scss
@@ -180,6 +180,7 @@
     .card-deck {
       display: flex;
       flex-flow: row wrap;
+      -webkit-flex-flow: row wrap;
       margin-right: -.625rem;
       margin-left: -.625rem;
 
